Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-6257

MariaDB 5.5 fails to start with 10.0 InnoDB log files

    XMLWordPrintable

Details

    Description

      When default log file size is used database created using 10.0 fails to start using 5.5 on following message:

      nnoDB: Error: log file ./ib_logfile0 is of different size 0 50331648 bytes
      InnoDB: than specified in the .cnf file 0 5242880 bytes!
      140521 12:24:53 [ERROR] Plugin 'InnoDB' init function returned error.
      140521 12:24:53 [ERROR] Plugin 'InnoDB' registration as a STORAGE ENGINE failed.
      140521 12:24:53 [ERROR] Unknown/unsupported storage engine: InnoDB
      140521 12:24:53 [ERROR] Aborting

      This is because in 10.0 by default log file size is 48M when 5.5 it is 5M.

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            jplindst Jan Lindström (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 1h Original Estimate - 1h
                1h
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3h
                3h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.