MDEV-6257: MariaDB 5.5 fails to start with 10.0 InnoDB log files

Analysis: By default 10.0 creates 48M log files and 5.5 assumes they
are 5M.

Fix: Remove the error and do size comparison later.